--- a/javascript/assessment-2.html
+++ b/javascript/assessment-2.html
@@ -8,6 +8,7 @@
   <body>
     <script>
       // WAP to find prime number or not
+      console.log(" 01)WAP to find prime number or not");
       var num = 19;
       var count = 0;
       for (var i = 2; i < num; i++) {
@@ -20,16 +21,23 @@
       } else {
         console.log("Not prime number");
       }
+
      
       // WAP to find reverse string
+      console.log("******************");
+      console.log(" 02)WAP to find reverse string");
       var str = "goodMorning";
+      console.log(str);
       var str1 = "";
 
       for (var i = str.length - 1; i >= 0; i--) {
         str1 = str1 + str.charAt(i);
       }
       console.log(str1);
+
       // WAP to find Second Largest
+      console.log("******************");
+      console.log(" 03)WAP to find Second Largest");
       var array = [10, 2, 3, 45, 16, 55];
       var firstLarge = array[0];
       var secondLarge = array[0];
@@ -42,8 +50,92 @@
           secondLarge = array[i];
         }
       }
-      console.log("firstLarge : " + firstLarge);
+console.log(array);
       console.log("secondLarge : " + secondLarge);
+
+      // WAP to find Bubble Sort
+      console.log("******************");
+      console.log(" 04)WAP to find Bubble Sort");
+      // Normal Sort
+      var array01 = [1, 2, 8, 5, 6, 7, 9, 10, 4, 3];
+
+      // for (var i = 0; i < array01.length; i++) {
+      //   var temp;
+      //   for (var j = 0; j < array01.length; j++) {
+      //     if (array01[j] > array01[j + 1]) {
+      //       temp = array01[j];
+      //       array01[j] = array01[j+1];
+      //       array01[j+1] = temp;
+      //     }
+      //   }
+      // }
+
+      // Bubble Sort
+
+      for (var i = 0; i < array01.length; i++) {
+        for (var j = 0; j < array01.length - i - 1; j++) {
+          if (array01[j] > array01[j + 1]) {
+            var temp = array01[j];
+            array01[j] = array01[j + 1];
+            array01[j + 1] = temp;
+          }
+        }
+      }
+      console.log(array01);
+
+      //create 5 array without using new keyword with all primitive types and object and loop for loop using
+      console.log("*******************");
+      console.log(
+        " 05)create 5 array without using new keyword with all primitive types and object and loop for loop using"
+      );
+
+      var person = [
+        "Ravi",
+        23,
+        false,
+        undefined,
+        null,
+        BigInt(1235356144526),
+        Symbol(123),
+      ];
+
+      for (let i = 0; i < person.length; i++) {
+        console.log(person[i]);
+      }
+      console.log("***************");
+      var employee = [
+        "Raju",
+        25,
+        true,
+        undefined,
+        null,
+        BigInt(10111213141516171819),
+        Symbol(321),
+      ];
+
+      for (let i = 0; i < employee.length; i++) {
+        console.log(employee[i]);
+      }
+      console.log("***************");
+      var employee = [
+        "Raghu",
+        21,
+        false,
+        undefined,
+        null,
+        BigInt(987654321),
+        Symbol(741),
+      ];
+
+      for (let i = 0; i < employee.length; i++) {
+        console.log(employee[i]);
+      }
+
+       //create 5 array with using new keyword with all primitive types and object and loop for loop using
+       console.log("*******************");
+      console.log(
+        " 06)create 5 array with using new keyword with all primitive types and object and loop for loop using"
+      );
     </script>
   </body>
 </html>
