--- a/javascript/assessment-2.html
+++ b/javascript/assessment-2.html
@@ -361,7 +361,7 @@
 
       console.log("**************************************");
       console.log(
-        "calculate BMI result print using ternary operator and if else statement"
+        "07) calculate BMI result print using ternary operator and if else statement"
       );
       console.log("*) Ternary operator");
       var heigth = 1.2;
