--- a/javascript/checking_js.html
+++ b/javascript/checking_js.html
@@ -35,6 +35,13 @@
         }
       }
       console.log(array01);
+
+      var a = "10";
+      var b = 10;
+      console.log(a === b);
+      console.log(a == b);
+      console.log(typeof a);
+      console.log(typeof b);
     </script>
   </body>
 </html>
