--- a/javascript/Array-Methods/index.html
+++ b/javascript/Array-Methods/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Excutes-Assessments</title>
+    <title>Array-Methods</title>
     <script src="array-methods.js"></script>
 </head>
 <body>
