--- a/javascript/practice-js.html
+++ b/javascript/practice-js.html
@@ -206,9 +206,12 @@
       //   console.log("value =" + value + "  " + "index =" + index);
       // });
 
-      var foreach = preson.foreach((value, index) => {
-        console.log("value =" + value + "  " + "index =" + index);
-      });
+      // var foreach = preson.foreach((value, index) => {
+      //   console.log("value =" + value + "  " + "index =" + index);
+      // });
+      const d = new Date();
+console.log(d.toLocaleDateString());
+    
     </script>
   </body>
 </html>
