--- a/javascript/practice-js.html
+++ b/javascript/practice-js.html
@@ -196,11 +196,11 @@
       //   console.log(value > 40);
       // });
 
-      let preson = {
-        name: "anil",
-        age: 23,
-        phno: 8747036362,
-      };
+      // let preson = {
+      //   name: "anil",
+      //   age: 23,
+      //   phno: 8747036362,
+      // };
 
       // var map = preson.map((value, index) => {
       //   console.log("value =" + value + "  " + "index =" + index);
@@ -209,11 +209,34 @@
       // var foreach = preson.foreach((value, index) => {
       //   console.log("value =" + value + "  " + "index =" + index);
       // });
-      const d = new Date();
-console.log(d.toLocaleDateString());
+      //       const d = new Date();
+      // console.log(d.toLocaleDateString());
+
+      // console.log(fetch("https://jsonplaceholder.typicode.com/users"));
+
+      // let person = {
+      //   name: "raju",
+      //   age: 23,
+      // };
+
+      // let personcopy = Object.assign({}, person);
+      // let personcopy = person;
+
+      // personcopy.name = "manju";
+      // personcopy.phno = 8747036362;
+
+      // console.log("original", person);
+      // console.log("copy", personcopy);
+
+      // "https://jsonplaceholder.typicode.com/users"
 
 
-    
+      let p1=new peomise((resolve,reject)=>{
+        if(10!=11){
+          console.log("10 i");
+        }
+      })
+
     </script>
   </body>
 </html>
