--- a/javascript/promise/index.html
+++ b/javascript/promise/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Promise-javaScript</title>
-
-</head>
-<body>
+  </head>
+  <body>
     <script src="promise.js"></script>
     <!-- <script src="fetch.js"></script> -->
     <!-- <script src="promise1.js"></script> -->
-    
-</body>
+  </body>
 </html>
