--- a/javascript/TDZ/index.html
+++ b/javascript/TDZ/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Local-Session-Storage-javaScript</title>
-<script src="lo.js"></script>
+    <title>Temporal-Dead-Zone-JavaScript-(TDZ)</title>
+<script src="tdz.js"></script>
 </head>
 <body>
    
