--- a/javascript/Mathametic-function/index.html
+++ b/javascript/Mathametic-function/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Immutable-Mutable-javaScript</title>
-<script src="methametic.js"></script>
+    <title>Mathematic-Function-javaScript</title>
+<script src="mathematic.js"></script>
 </head>
 <body>
    
