--- a/javascript/Scope/index.html
+++ b/javascript/Scope/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shallow-Deep-Copy-JavaScript</title>
+    <title>Scope-JavaScript</title>
 <script src="scope.js"></script>
 </head>
 <body>
