--- a/javascript/javascript-function/index.html
+++ b/javascript/javascript-function/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Immutable-Mutable-javaScript</title>
+    <title>javaScript-Functions</title>
 <script src="js_functions.js"></script>
 </head>
 <body>
