--- a/javascript/practice-js.html
+++ b/javascript/practice-js.html
@@ -230,12 +230,67 @@
 
       // "https://jsonplaceholder.typicode.com/users"
 
+      // let p1 = new Promise((resolve, reject) => {
+      //   if (10 === 11) {
+      //     console.log("10 is equal 10");
+      //   } else {
+      //     console.log("10 is not equal 11");
+      //   }
+      // });
 
-      let p1=new peomise((resolve,reject)=>{
-        if(10!=11){
-          console.log("10 i");
-        }
-      })
+      // p1.then((resolve) => {
+      //   console.log("resolve", resolve);
+      // }).catch((reject) => {
+      //   console.log("reject", reject);
+      // });
+
+    // EX01
+        // fetch("https://jsonplaceholder.typicode.com/users")
+        // .then((resolve)=>resolve.json())
+        // .then((data)=> console.log("data",data));
+    
+     // EX02
+// let p2= async function (){
+//   try{
+// let pinky= await fetch("https://jsonplaceholder.typicode.com/users")
+// let pop= await pinky.json()
+// console.log(pop);
+//   }
+//   catch(err){
+// console.log(err);
+//   }
+// }
+// p2();
+
+// EX03
+
+let  promise1=new Promise((resolve)=>{
+  fetch("https://jsonplaceholder.typicode.com/users")
+  .then((response)=>response.json())
+  .then((data)=>resolve(data))
+})
+
+let promise2=new Promise((praveen)=>{
+  fetch("https://jsonplaceholder.typicode.com/todos")
+  .then((raghu)=>raghu.json())
+  .then((ramu)=>praveen(ramu))
+})
+
+// Promise.all([promise1,promise2])
+// .then((anil)=>{
+//   console.log("anil",anil);
+// })
+// .catch((err)=>{
+//   console.log("err",err);
+// })
+
+Promise.race([promise1,promise2])
+.then((anil)=>{
+  console.log("anil",anil);
+})
+.catch((err)=>{
+  console.log("err",err);
+})
 
     </script>
   </body>
