--- a/javascript/checking-js.html
+++ b/javascript/checking-js.html
@@ -43,20 +43,16 @@
       //   console.log(typeof a);
       //   console.log(typeof b);
 
-      let str = "mango";
+      var date = liveDateTime.split(" ");
+    var weekday = date[0];
+    var day = date[1];
+    var month = date[2];
+    var year = date[3];
+var time = date[4].split(":");
+    var hour = time[0];
+    var minute = time[1];
+    var second = time[2];
 
-      let str01 = "";
-
-      for (let i = 0; i < str.length; i++) {
-        if (i === 1) {
-          str01 += str[i].toLocaleUpperCase();
-          // console.log(str[i].toUpperCase());
-        }
-        str01 += str[i];
-      }
-
-      console.log(str);
-      console.log(str01);
     </script>
   </body>
 </html>
