--- a/javascript/checking-js.html
+++ b/javascript/checking-js.html
@@ -4,6 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Checking-javascript</title>
+    <style>
+      body {
+        margin: 0 !important;
+      }
+      #main {
+        height: 50vh;
+        width: 50vw;
+        background-color: lightgray;
+      }
+      #subdiv {
+        height: 13vh;
+        width: 50%;
+        background-color: lightpink;
+        margin-left: 50%;
+      }
+    </style>
   </head>
   <body>
     <script>
@@ -42,17 +58,16 @@
       //   console.log(a == b);
       //   console.log(typeof a);
       //   console.log(typeof b);
-
-      var date = liveDateTime.split(" ");
-    var weekday = date[0];
-    var day = date[1];
-    var month = date[2];
-    var year = date[3];
-var time = date[4].split(":");
-    var hour = time[0];
-    var minute = time[1];
-    var second = time[2];
-
     </script>
+
+    <div id="main">
+      <div id="subdiv">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt magnam
+        consequuntur, libero asperiores excepturi neque maiores necessitatibus
+        ipsum natus harum ad, deleniti quia aperiam non, obcaecati voluptate!
+        Sit, fugit dolore.
+      </div>
+      p
+    </div>
   </body>
 </html>
