--- a/javascript/time-test.html
+++ b/javascript/time-test.html
@@ -18,14 +18,20 @@
 
 <!DOCTYPE html>
 <html>
-<head></head>
-<body>
-<h1>Demo: Current Date</h1>
-<p id="p1"></p>
-<script>
-	var date = new Date();
-    let hour=date.getHours();
-	document.getElementById("p1").innerHTML = hour;
-</script>
-</body>
+  <head></head>
+  <body>
+    <h1>Demo: Current Date</h1>
+    <p id="p1"></p>
+    <p id="p2"></p>
+    <!-- <script>
+      var date = new Date();
+      var hour = date.getHours();
+      var hours = hour;
+      document.getElementById("p2").innerHTML =
+        hours <= 12 ? console.log("AM") : console.log("PM");
+
+      document.getElementById("p1").innerHTML = hour;
+    </script> -->
+    <a href="https://www.flipkart.com/">click me</a>
+  </body>
 </html>
