--- a/javascript/DOM/index.html
+++ b/javascript/DOM/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Excutes-Assessments</title>
+    <title>Document-Object-Module</title>
     <link rel="stylesheet" href="index.css">
   </head>
   <body>
