--- a/javascript/Window-object/index.html
+++ b/javascript/Window-object/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Window-Methods-JavaScript</title>
-<script src="window.js"></script>
+
 </head>
 <body>
    
-    
+    <script src="window-object.js"></script>   
 </body>
 </html>
