--- a/javascript/form-Assessment/index.html
+++ b/javascript/form-Assessment/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head onload="adddata()">
+  <head >
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>form-assessment</title>
