--- a/javascript/promise/index.html
+++ b/javascript/promise/index.html
@@ -6,7 +6,7 @@
     <title>Promise-javaScript</title>
   </head>
   <body>
-    <script src="promise.js"></script>
+    <script src="promise1.js"></script>
     <!-- <script src="fetch.js"></script> -->
     <!-- <script src="promise1.js"></script> -->
   </body>
