--- a/javascript/Test-Cases/index.html
+++ b/javascript/Test-Cases/index.html
@@ -6,10 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- <script src="api-fetch.js"></script> -->
+    <script src="api-fetch.js"></script>
     
     <!-- <div id="test"></div> -->
-    <script src="test-purpose.js"></script>
+    <!-- <script src="test-purpose.js"></script> -->
 
 </body>
 </html>
