--- a/javascript/form-validation/form-validation.html
+++ b/javascript/form-validation/form-validation.html
@@ -93,6 +93,9 @@
           <p id="emptysubjects">please select options</p>
         </div> 
 
+        <div>
+          <input type="date" placeholder="fromdate" class="">
+        </div>
         <br />
         <button id="loginbtn">sunmit</button>
       </form>
