--- a/javascript/Destructuring/index.html
+++ b/javascript/Destructuring/index.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Local-Session-Storage-javaScript</title>
-<script src="lo.js"></script>
+    <title>Destructuring</title>
+    <script src="destructuring.js"></script>
 </head>
 <body>
-   
     
 </body>
 </html>
